UI: header layout, QSS styling, margins updated

--- a/Exploration/UI/main_mockup.html
+++ b/Exploration/UI/main_mockup.html
@@ -202,7 +202,7 @@
 
       <div class="category-buttons">
         <button>Add Vegetable</button>
-        <button>Add Miscellaneous</button>
+        <button>Add Manual</button>
       </div>
 
       <div class="total-inline">
